dataset1235/2025-2/805158916/users/2488736387/executions/2651470117_2819779400.log
== SUBMISSION (2025-08-25 14:28:15)
-- CODE: 
quantidade_jogos = int(input())
valor_unitario = float(intup())
valor_frete = float(input())
preco_total = quantidade_jogos * valor_unitario) + valor_frete
print(preco_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 4
    preco_total = quantidade_jogos * valor_unitario) + valor_frete
                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 4
    preco_total = quantidade_jogos * valor_unitario) + valor_frete
                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 4
    preco_total = quantidade_jogos * valor_unitario) + valor_frete
                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 4
    preco_total = quantidade_jogos * valor_unitario) + valor_frete
                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 4
    preco_total = quantidade_jogos * valor_unitario) + valor_frete
                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 4
    preco_total = quantidade_jogos * valor_unitario) + valor_frete
                                                   ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:29:39)
-- CODE: 
quantidade_jogos = int(input())
valor_unitario = float(input())
valor_frete = float(input())
preco_total = (quantidade_jogos * valor_unitario) + valor_frete
print(preco_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:29:24)
-- CODE: 
quantidade_jogos = int(input())
valor_unitario = float(input())
valor_frete = float(input())
preco_total = quantidade_jogos * valor_unitario) + valor_frete
print(preco_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 4
    preco_total = quantidade_jogos * valor_unitario) + valor_frete
                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 4
    preco_total = quantidade_jogos * valor_unitario) + valor_frete
                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 4
    preco_total = quantidade_jogos * valor_unitario) + valor_frete
                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 4
    preco_total = quantidade_jogos * valor_unitario) + valor_frete
                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 4
    preco_total = quantidade_jogos * valor_unitario) + valor_frete
                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 4
    preco_total = quantidade_jogos * valor_unitario) + valor_frete
                                                   ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:28:18)
-- CODE: 
quantidade_jogos = int(input())
valor_unitario = float(intup())
valor_frete = float(input())
preco_total = quantidade_jogos * valor_unitario) + valor_frete
print(preco_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 4
    preco_total = quantidade_jogos * valor_unitario) + valor_frete
                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 4
    preco_total = quantidade_jogos * valor_unitario) + valor_frete
                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 4
    preco_total = quantidade_jogos * valor_unitario) + valor_frete
                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 4
    preco_total = quantidade_jogos * valor_unitario) + valor_frete
                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 4
    preco_total = quantidade_jogos * valor_unitario) + valor_frete
                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 4
    preco_total = quantidade_jogos * valor_unitario) + valor_frete
                                                   ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:27:46)
-- CODE: 
quantidade_jogos = int(input())
valor_unitario = float(intup())
valor_frete = float(input())
preco_total = (quantidade_jogos * valor_unitario) + valor_frete
print(preco_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_unitario = float(intup())
                           ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_unitario = float(intup())
                           ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_unitario = float(intup())
                           ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_unitario = float(intup())
                           ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_unitario = float(intup())
                           ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_unitario = float(intup())
                           ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
